les4-ingress/ingress-path.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path-rules

spec:
  rules:
  - host: main.azimuthpro.online
    http:
      paths:
      - path: /webx
        pathType: Prefix
        backend:
          service:
            name: webx
            port:
              number: 8080
